fix: correct vertical alignment of tab titles

--- a/styles/_tab-bar.scss
+++ b/styles/_tab-bar.scss
@@ -22,7 +22,7 @@
         .title {
           margin-right: 21px;
           text-align: center;
-          display: inline;
+          display: inline-flex;
           vertical-align: bottom;
           margin-top: 3px;
         }
